# cyberimmune-systems-example-traffic-light-kos

./: .gitmodules  CMakeLists.txt  Makefile_windows  README.md
central-server/: Makefile  central-server.py  commands.py  models.py  requests.rest  utils.py
central-server/static/: index.html
client/: CMakeLists.txt
client/src/: client.c
connector/: CMakeLists.txt
connector/include/: response-parser.h
connector/src/: connector.c  response-parser.c
control_system/: CMakeLists.txt
control_system/include/: mode.h
control_system/src/: connector.c  control_system.c  gpio.c  mode.c
diagnostics/src/: diagnostics.c
einit/: CMakeLists.txt
einit/src/: audit_policy.psl  init.yaml.in  klog_entity.c  security.psl
lights_gpio/: CMakeLists.txt
lights_gpio/headers/: server.h
lights_gpio/src/: lights_gpio.c  server.c
resources/: CControlSystem.cdl  CDiagMessage.cdl  Connector.edl  ControlSystem.edl  ControlSystem.idl  Diagnostics.edl  IDiagMessage.idl  IMode.idl
